GAMS Transfer R v1.10.0
==================
- performance improvement in read
- Partial domain forwarding is now allowed by passing a logical vector as the `domainForwarding` argument

GAMS Transfer R v1.8.0
==================
- `removeSymbols` removes symbol links in other symbols
- added `symbols` argument to Container methods `renameUELs` and `removeUELs`
- `findDuplicateRecords` now returns a data frame instead of row indices
- Breaking: `Container` `data` field is now an ordered dictionary from `collections` package instead of named list. Instead of `m$data$<symbolname>`, use `m[<symbolname>]`.
- performance improvement to `Container` method `hasSymbols`. This results in significant speed-ups when adding multiple symbols to the Container.
- added `symbols` argument to `Container` methods `getDomainViolations`, `hasDomainViolations`, `countDomainViolations`, `dropDomainViolations`, `hasDuplicateRecords`, `countDuplicateRecords`, `dropDuplicateRecords`, `isValid`, and `write` for partial operation.
- `Container` method `getSymbols` now always returns a list
- added `equals` method to `Symbols` to check if symbols are equal
- bug fix in `SpecialValues$isNA`
- bug fix in `getUELs` for scalar symbols
- bug fix in `Symbol` method `isValid` for symbols containing only NA
- bug fix in `Variable` and `Equation` set records for numeric inputs
- added `equals` method for `Container` and `ConstContainer`

GAMS Transfer R v1.6.0
==================
- domain forwarding bug fix when the records are NULL
- describe* method bug fix when the type of symbol is not present in the Container
- added UniverseAlias symbol type for alias to the Universe
- renameUELs methods now have `allowMerge` argument for more data flexibility

GAMS Transfer R v1.4.0
==================
- Breaking: Symbol name uniqueness is now checked case insensitively. For
  example, it is not possible to have two different symbols named
  `symbol` and `Symbol` or `SYMBOL` anymore